--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>Bro Code</title>
+    <title>Code Champs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
