Update the error on the front page
Update the error on the front page

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./_.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:description" content="Practice. Compete. Code</Champs>."/>
+    <meta property="og:description" content="Practice. Compete. Code."/>
 
     <meta property="og:title" content="One stop portal for all your coding needs." />
 
